# ffmpeg-cluster

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.sh
.devcontainer/: devcontainer.json
ffmpeg-cluster-client/: Cargo.toml
ffmpeg-cluster-client/src/: ffmpeg.rs  main.rs
ffmpeg-cluster-client/src/services/: storage.rs
ffmpeg-cluster-common/: Cargo.toml
ffmpeg-cluster-common/src/: file_transfer.rs  lib.rs  transfer_handler.rs
ffmpeg-cluster-common/src/error/: mod.rs  types.rs
ffmpeg-cluster-common/src/models/: capabilities.rs  config.rs  messages.rs  mod.rs
ffmpeg-cluster-server/: Cargo.toml
ffmpeg-cluster-server/src/: main.rs
ffmpeg-cluster-server/src/handlers/: command.rs  mod.rs  upload.rs  websocket.rs
ffmpeg-cluster-server/src/services/: database.rs  ffmpeg.rs  ffprobe.rs  job_queue.rs  mod.rs  segment_manager.rs  upload.rs
ffmpeg-cluster-server/src/utils/: mod.rs  path.rs
