[package]
name = "ffmpeg-cluster-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-cluster-common = { path = "../ffmpeg-cluster-common" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12.11", features = ["multipart", "json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
url = "2.3"
uuid = { version = "1.0", features = ["v4"] }
tokio-util = { version = "0.7", features = ["codec"] }
regex = "1.5"
bytes = "1.0"
rand = "0.8"
thiserror = "2.0"
tempfile = "3.2"
tokio-io = "0.1"
