[package]
name = "ffmpeg-cluster-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-cluster-common = { path = "../ffmpeg-cluster-common" }
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "process",
    "io-util",
    "sync",
    "time",
] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
thiserror = "2.0"
tempfile = "3.2"
