[package]
name = "ffmpeg-cluster-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-cluster-common = { path = "../ffmpeg-cluster-common" }
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "process",
    "io-util",
    "sync",
    "time",
] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
openssl = { version = "0.10.68", features = ["vendored"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "uuid"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
directories = "5.0"
bytes = "1.0"
thiserror = "2.0"
tempfile = "3.2"
