[package]
name = "ffmpeg-cluster-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"