[package]
name = "ffmpeg-cluster-common"
version = "0.2.3"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["fs", "process"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
