[package]
name = "ffmpeg-cluster-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
ffmpeg-cluster-common = { path = "../ffmpeg-cluster-common" }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "limit"] }
tower = { version = "0.5.2", features = ["util"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["codec", "io"] }
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
mime_guess = "2.0"
lazy_static = "1.4"
tempfile = "3.2"
futures-util = "0.3"
