[package]
name = "ffmpeg-cluster-server"
version = "0.2.4"
edition = "2021"

[dependencies]
ffmpeg-cluster-common = { path = "../ffmpeg-cluster-common" }
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "process",
    "io-util",
    "sync",
    "time",
] }
axum = { version = "0.8.1", features = ["ws", "multipart"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "limit"] }
tower = { version = "0.5.2", features = ["util"] }
futures = "0.3" # Keep this as it's being used
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "uuid"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
directories = "5.0"
which = "7.0.1"
